trying to implement confirm on a button

--- a/index.html
+++ b/index.html
@@ -29,4 +29,11 @@
       ">
 
     <p class="js-message"></p>
+
+    <button class="toggle-btn btn">Gaming</button>
+    <br><br>
+
+    <button class="toggle-btn btn1">Gaming</button>
+    <button class="toggle-btn btn2">Music</button>
+    <button class="toggle-btn btn3">Tech </button>
 </html>
