--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
       <h1 class="main-heading" id="main-heading">Favourite Movie Franchise</h1>
       <ul>
-        <li class="list-items">The Matrix</li>
+        <li class="list-items"> <span>Neo</span> The Matrix</li>
         <li class="list-items">Star Wars</li>
         <li class="list-items">Harry Potter</li>
         <li class="list-items">Lord of the Rings</li>
