DOM practise fcc

--- a/index.html
+++ b/index.html
@@ -54,4 +54,12 @@
       </ul>
     </div>
   </section>
+  <section class="section2">
+    <button class="reveal-btn boxes test-one">Reveal 
+      More
+    </button>
+    <div class="hidden-content boxes div">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem beatae totam adipisci veniam atque saepe magni odio, neque dignissimos nulla delectus corrupti esse deserunt molestias? Corrupti obcaecati facilis odit magnam aliquam ex aliquid quos repellat asperiores reiciendis doloribus similique praesentium a adipisci commodi, quae sit ut accusantium nesciunt blanditiis! Eligendi sapiente recusandae odio sint cum, voluptate voluptatum velit nesciunt expedita corporis minus itaque necessitatibus, tenetur dolor voluptatem quasi fugiat dolorum voluptas adipisci. 
+    </div>
+  </section>
 </html>
